model swagger setup
