# swagger.json
@@ -20,7 +20,16 @@
                         "type": "link"
                     }, 
                     "reqAchivement": {
-                        "type": "string"
+                        "type":"object",
+                        "properties":{ 
+                            "reqPoints": {
+                                "type": "number"
+                            },
+                            "requisits": {
+                                "type": "string"
+                            }
+                        },
+                        "required": ["points","requisitos"]
                     }, 
                     "rewardPoints": {
                         "type": "integer"
@@ -36,12 +45,15 @@
                     }, 
                     "contact": {
                         "type": "string"
+                    },
+                    "desc": {
+                        "type": "string"
                     }
                 }
             },
             "Project": {
                 "type": "object",
-                "required": ["client", "name","manager","workers","tasks"],
+                "required": ["client", "name","manager","workers"],
                 "properties": {
                     "client": {
                         "type": "string"
@@ -53,31 +65,46 @@
                         "type": "string"
                     }, 
                     "workers": {
-                        "type": "array",
-                        "item":{
-                            "type":"string"
-                        }
-                    }, 
-                    "tasks": {
-                        "type": "array"
+                        "type":"object",
+                        "properties":{ 
+                            "name": {
+                                "type": "string"
+                            },
+                            "id": {
+                                "type": "string"
+                            }
+                        },
+                        "required": ["name","id"]
                     }
                 }
             },
             "Team": {
                 "type": "object",
-                "required": ["workers", "desc"],
+                "required": ["title", "desc"],
                 "properties": {
-                    "workers": {
-                        "type": "array"
+                    "title": {
+                        "type": "string"
                     }, 
                     "desc": {
                         "type": "string"
+                    },
+                    "workers": {
+                        "type":"object",
+                        "properties":{ 
+                            "name": {
+                                "type": "string"
+                            },
+                            "id": {
+                                "type": "string"
+                            }
+                        },
+                        "required": ["name","id"]
                     }
                 }
             },
             "Worker": {
                 "type": "object",
-                "required": ["name", "admin","password","email","badges","tasksDone","hoursWorked","projectsInvolved","HoursForTheDay"],
+                "required": ["name", "admin", "password"],
                 "properties": {
                     "name": {
                         "type": "string"
@@ -92,7 +119,31 @@
                         "type": "string"
                     }, 
                     "badges": {
-                        "type": "array"
+                        "type": "object",
+                        "required": ["name", "image", "reqAchivement", "rewardPoints"],
+                        "properties": {
+                            "name": {
+                                "type": "string"
+                            }, 
+                            "image": {
+                                "type": "link"
+                            }, 
+                            "reqAchivement": {
+                                "type":"object",
+                                "properties":{ 
+                                    "reqPoints": {
+                                        "type": "number"
+                                    },
+                                    "requisits": {
+                                        "type": "string"
+                                    }
+                                },
+                                "required": ["points","requisitos"]
+                            }, 
+                            "rewardPoints": {
+                                "type": "integer"
+                            }
+                        }
                     }, 
                     "tasksDone": {
                         "type": "integer"
@@ -104,6 +155,24 @@
                         "type": "integer"
                     }, 
                     "HoursForTheDay": {
+                        "type": "integer"
+                    }
+                }
+            },
+            "Task": {
+                "type": "object",
+                "required": ["title", "worker", "timeSpent"],
+                "properties": {
+                    "title": {
+                        "type": "string"
+                    }, 
+                    "worker": {
+                        "type": "string"
+                    }, 
+                    "desc": {
+                        "type":"string"
+                    }, 
+                    "timeSpent": {
                         "type": "integer"
                     }
                 }
